--- a/templates/tool/components/header-nav.html
+++ b/templates/tool/components/header-nav.html
@@ -4,7 +4,7 @@
             <div class="flex items-center">
                 <div class="flex-shrink-0">
                     <a href="{% url 'tool-home' %}" class="flex items-center">
-                        <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Lang2SQL</span>
+                        <span class="self-center text-xl font-semibold whitespace-nowrap text-white">Lang2SQL</span>
                     </a>
                 </div>
                 <div class="hidden md:block">
