--- a/templates/tool/components/db-connect-form.html
+++ b/templates/tool/components/db-connect-form.html
@@ -2,7 +2,7 @@
     <div class="space-y-12">
         <div class="border-b border-gray-900/10 pb-12">
             <p class="mt-1 text-sm leading-6 text-gray-600">Please make sure it is a public DB. Test with
-                staging DB first.</p>
+                staging DB first. Use <button class="text-indigo-600" type="button" @click="configureDefaultDBURL">Sample Employees DB</button> instead.</p>
 
             <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                 <div class="sm:col-span-4">
