--- a/templates/tool/config-page.html
+++ b/templates/tool/config-page.html
@@ -96,6 +96,7 @@
                             console.log(data);
                             if (data.redirect) {
                                 window.location.href = "{% url 'tool:tool-query' %}";
+                                return;
                             }
                             ref.loading = false;
                             ref.db_tables = data;
