Added the public DB schema and rows here.

--- a/templates/tool/components/db-connect-form.html
+++ b/templates/tool/components/db-connect-form.html
@@ -2,7 +2,13 @@
     <div class="space-y-12">
         <div class="border-b border-gray-900/10 pb-12">
             <p class="mt-1 text-sm leading-6 text-gray-600">Please make sure it is a public DB. Test with
-                staging DB first. Use <button class="text-indigo-600" type="button" @click="configureDefaultDBURL">Sample Employees DB</button> instead.</p>
+                sample public employees DB first. Refer for schema <a class="text-indigo-600"
+                                                                      href="https://docs.google.com/spreadsheets/d/1NjHmzODKyctohbNTrQAKgsh1jziT4xEYW5aHiGmVGpc/edit?usp=sharing"
+                                                                      target="_blank">here</a>. Use
+                <button class="text-indigo-600" type="button" @click="configureDefaultDBURL">Sample Employees DB
+                </button>
+                instead.
+            </p>
 
             <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
                 <div class="sm:col-span-4">
